k8s/infrastructure/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-clusterip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      port: 9000
      targetPort: traefik
    - name: auth
      port: 4181
      targetPort: auth
