k8s/infrastructure/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik.mchill.io")
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: forward-auth
          namespace: traefik
    - match: Host("auth.mchill.io")
      kind: Rule
      services:
        - name: traefik-clusterip
          port: 4181
      middlewares:
        - name: forward-auth
          namespace: traefik
